--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 	},
 	"dependencies": {
 		"@node-rs/argon2": "^2.0.2",
+		"chart.js": "^4.5.1",
 		"lucide-svelte": "^0.553.0",
 		"postgres": "^3.4.7"
 	}
